# ai-trip-planner

./: .gitignore  AGENTS.md  API_INTEGRATION_SPEC.md  CLAUDE.md  IMPLEMENTATION_SPEC.md  RAG.md  README.md  conductor-run.sh  conductor-setup.sh  conductor.json  docker-compose.yml  dossier_agent_prd.md  dossier_agent_prd_cc.md  itinerary_results.json  render.yaml  start.sh  test_api.py
.github/: SETUP_CODE_REVIEW.md
.github/scripts/: claude_review.py
.github/workflows/: claude-code-review.yml
backend/: .env  .env.example  airtable_integration.py  dossier_main.py  env_example.txt  main.py  main_with_tools_fixed.py  pyproject.toml  requirements.txt
backend/archive/: main_legacy.py  main_simple_multi_tools.py  main_with_proper_tracing.py  main_with_tools.py
frontend/: dossier.html  index.html  package-lock.json  package.json
optional/airtable/: README.md  airtable_integration.py
test scripts/: diverse_queries.py  diverse_query_results_20250902_172503.json  diverse_query_results_20250902_173443.json  generate_itineraries.py  itinerary_results.json  quick_test.py  synthetic_data_gen.py  test_dossier.py
tutorial-simple/backend/: app.py
tutorial-simple/frontend/: index.html
tutorial-simple/tests/: test_app.py
