[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trip-planner-backend"
version = "1.0.0"
description = "AI-powered trip planning backend using LangGraph with Arize observability"
authors = [{name = "Trip Planner Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "arize-otel>=0.8.1",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "openinference-instrumentation-langchain>=0.1.19",
    "openinference-instrumentation-litellm>=0.1.0",
    "langgraph>=0.2.55",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.10",
    "langchain-community>=0.3.5",
    "litellm",
    "python-dotenv==1.0.0",
]

[project.scripts]
trip-planner = "main:app"

[tool.setuptools]
packages = ["trip_planner_backend"]
